# Selectivity

./: .gitignore  part_selectivity_results.csv  part_selectivity_results_shuffled.csv  pyproject.toml
mysql/: generate_mysql_explain.py  ingest_power_mysql.sql  mysql_filtered_results.csv  mysql_filtered_results_2.csv
pg/: README.md  README.txt  compute_errors.py  execute_queries.py  ingest_power.sql  normalize_csv.py  plan_rows_results.csv  plan_rows_results_2.csv  power_data_queries.sql  power_queries.sql  power_queries2.sql  translate_to_sql.py
results/highd/new/: power-2d-data_q_error.csv  power-2d-data_rms_error.csv  power-2d-data_time.csv
src/: driver_region_tree.py  utility.py
src/model/: region-tree_Power-2d-data_spl0.004000_b1000000_tr1000_te100.txt  region-tree_Power-2d-data_spl0.004000_b1000000_tr2000_te100.txt  region-tree_Power-2d-data_spl0.004000_b1000000_tr200_te100.txt  region-tree_Power-2d-data_spl0.004000_b1000000_tr500_te100.txt  region-tree_Power-2d-data_spl0.004000_b1000000_tr50_te100.txt
string/: generate_sql_queries.py  part_selectivity_results.csv  part_selectivity_results_shuffled.csv  process_part_tbl.py  tpyope.py
