[project]
name = "selectivity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cvxopt>=1.3.2",
    "gurobipy>=12.0.2",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "psycopg>=3.2.9",
    "scipy>=1.13.1",
]
